# ethereum-head-watcher

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-image.yml  ci-dev-goerli.yml  ci-dev-holesky.yml  ci-dev.yml  ci-prod.yml  ci-staging.yml  create-tag-and-trigger-deploy.yml  prepare-release.yml  tests_and_checks.yml
assets/: AccountingOracle.json  ConsolidationBus.json  LidoLocator.json  ValidatorsExitBusOracle.json
docker/alertmanager/: alertmanager.yml
docker/alertmanager-discord/: alertmanager-discord.yml
docker/prometheus/: prometheus.yml
docker/prometheus/rules/: common.yml
myproject/: health_check.py  main.py
src/: constants.py  main.py  typings.py  variables.py  watcher.py
src/alerts/: alert.py  common.py  slashing.py
src/handlers/: consolidation.py  el_triggered_exit.py  exit.py  fork.py  handler.py  helpers.py  slashing.py
src/keys_source/: base_source.py  file_source.py  keys_api_source.py
src/metrics/: healthcheck_server.py  logging.py
src/metrics/prometheus/: basic.py  duration_meter.py  watcher.py
src/providers/: consistency.py  http_provider.py
src/providers/alertmanager/: client.py  typings.py
src/providers/consensus/: client.py  typings.py
src/providers/keys/: client.py  typings.py
src/providers/keys_api/: client.py  typings.py
src/utils/: build.py  dataclass.py  decorators.py  events.py  exit.py
src/web3py/: middleware.py  typings.py
src/web3py/extensions/: __init__.py  contracts.py
tests/: conftest.py  test_watcher.py
tests/eip7251/: conftest.py  helpers.py  stubs.py  test_consolidations.py  test_withdrawals.py
tests/execution_requests/: conftest.py  helpers.py  stubs.py  test_consolidations.py  test_withdrawals.py
