[tool.poetry]
name = "ethereum-slashing-watcher"
version = "0.1.0"
description = "Bot that watches for slashing events on Ethereum"
authors = ["vladimir.g@lido.fi"]
license = "MIT License"
readme = "README.md"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.16.0"
requests = "^2.27.1"
unsync = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"
