[tool.poetry]
name = "ethereum-head-watcher"
version = "0.1.0"
description = "Bot that watches for important events on Ethereum head"
authors = ["vladimir.g@lido.fi"]
license = "MIT License"
readme = "README.md"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.16.0"
requests = "^2.27.1"
unsync = "^1.4.0"
json-stream = "^2.3.0"
eth-typing = "^3.3.0"
mypy = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"
pylint = "^2.16.2"
black = "^23.3.0"
types-requests = "^2.31.0.1"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint."messages control"]
disable = [
    # Disabled by default
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    # Disabled by us
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "invalid-name",
    "unused-argument",
    "wrong-import-order",
    "ungrouped-imports",
    "line-too-long",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "unspecified-encoding",
    "bare-except",
    "fixme",
    "cell-var-from-loop",
    "invalid-envvar-default",
    "global-statement",
    "redefined-outer-name",
]

[tool.mypy]
strict_equality = true
ignore_missing_imports = true
mypy_path = "stubs"

[tool.black]
line-length = 120
skip-string-normalization = true
